--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>artisan-link-platform</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Servigo</title>
+    <meta name="description" content="Plateforme des services à domicile" />
+    <meta name="author" content="Servigo" />
 
-    <meta property="og:title" content="artisan-link-platform" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Servigo" />
+    <meta property="og:description" content="Plateforme des services à domicile" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/servigologo.jpg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
