--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Plateforme des services à domicile" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/servigologo.jpg" />
-
+<link rel="icon" href="/images/servigologo.jpg" type="image/jpg" />
   </head>
 
   <body>
